<resources>
    <string name="app_name">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello_welcome">Hello Welcome!</string>
    <string name="default_name">Logito</string>
    <string name="logout">Logout</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Enter your name</string>
    <string name="cancel">Cancel</string>
</resources>